per_env/40-cubeartisan.kube.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"default": "cubeartisan-backend-config"}'
  labels:
    name: cubeartisan
  name: cubeartisan
spec:
  ports:
    - port: 80
      targetPort: 5000
      name: http
      protocol: TCP
  selector:
    name: cubeartisan
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: cubeartisan
  name: cubeartisan
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      name: cubeartisan
  template:
    metadata:
      labels:
        name: cubeartisan
    spec:
      restartPolicy: Always
      imagePullSecrets:
        - name: github-docker
      volumes:
        - name: carddatabase
          hostPath:
            path: /var/carddatabase
            type: DirectoryOrCreate
      serviceAccountName: log-and-trace
      containers:
        - name: cubeartisan
          image: "ghcr.io/cubeartisan/cubeartisan:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
              name: http
          resources:
            limits:
              memory: 6Gi
              cpu: 1
            requests:
              memory: 1Gi
              cpu: 250m
          livenessProbe:
            httpGet:
              path: /version
              port: http
            failureThreshold: 1
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /version
              port: http
            initialDelaySeconds: 30
            periodSeconds: 60
          startupProbe:
            httpGet:
              path: /version
              port: http
            failureThreshold: 40
            periodSeconds: 15
          volumeMounts:
            - mountPath: /CubeArtisan/server/private
              name: carddatabase
